--- a/package.json
+++ b/package.json
@@ -161,7 +161,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
+    "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-proposal-do-expressions": "^7.2.0",
@@ -196,8 +196,8 @@
     "cross-spawn": "^6.0.5",
     "css-loader": "^2.1.1",
     "detect-port": "^1.3.0",
-    "electron": "^4.1.3",
-    "electron-builder": "^20.39.0",
+    "electron": "^5.0.1",
+    "electron-builder": "^20.40.2",
     "electron-devtools-installer": "^2.2.4",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
@@ -227,10 +227,10 @@
     "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "opencollective-postinstall": "^2.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "prettier": "^1.16.4",
+    "prettier": "^1.17.1",
     "react-test-renderer": "^16.8.6",
     "redux-logger": "^3.0.6",
     "rimraf": "^2.6.3",
@@ -241,7 +241,7 @@
     "stylelint": "^9.10.1",
     "stylelint-config-prettier": "^5.0.0",
     "stylelint-config-standard": "^18.2.0",
-    "terser-webpack-plugin": "^1.2.3",
+    "terser-webpack-plugin": "^1.2.4",
     "testcafe": "^1.1.0",
     "testcafe-browser-provider-electron": "^0.0.8",
     "testcafe-live": "^0.1.4",
@@ -252,7 +252,7 @@
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1",
-    "yarn": "^1.15.2"
+    "yarn": "^1.16.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
@@ -265,21 +265,19 @@
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.8.2",
+    "react-hot-loader": "^4.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "source-map-support": "^0.5.11"
+    "source-map-support": "^0.5.11",
+    "prop-types": "^15.7.2"
   },
   "devEngines": {
     "node": ">=7.x",
     "npm": ">=4.x",
     "yarn": ">=0.21.3"
-  },
-  "collective": {
-    "url": "https://opencollective.com/electron-react-boilerplate-594"
   },
   "browserslist": "electron 1.6",
   "husky": {
