Add react-redux and basic Sound functionality

--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "opencollective-postinstall": "^2.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.17.1",
+    "react-hot-loader": "^4.8.4",
     "react-test-renderer": "^16.8.6",
     "redux-logger": "^3.0.6",
     "rimraf": "^2.6.3",
@@ -184,27 +185,30 @@
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1",
-    "yarn": "^1.16.0",
-    "react-hot-loader": "^4.8.4"
+    "yarn": "^1.16.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.3.2",
     "core-js": "2",
     "devtron": "^1.4.0",
     "electron-debug": "^2.1.0",
     "electron-log": "^3.0.4",
     "electron-updater": "^4.0.6",
+    "glob": "^7.1.4",
     "history": "^4.9.0",
     "howler": "^2.1.2",
+    "immer": "^3.1.2",
+    "mousetrap": "^1.6.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "source-map-support": "^0.5.11"
   },
   "devEngines": {
