--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,17 @@
         "config": "configs/webpack.config.eslint.js"
       }
     }
+  },
+  "rules": {
+    "react/no-access-state-in-setstate": null,
+    "jsx-a11y/click-events-have-key-events": null,
+    "no-underscore-dangle": ["error", { "allowAfterThis": true }],
+    "no-param-reassign": "off",
+    "no-shadow": [
+      "error",
+      {
+        "allow": ["D*"]
+      }
+    ]
   }
 }
