--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
   "rules": {
-    "declaration-empty-line-before": null
+    "declaration-empty-line-before": null,
+    "at-rule-no-unknown": null
   }
 }
