--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "react/no-access-state-in-setstate": null,
     "jsx-a11y/click-events-have-key-events": null,
     "no-underscore-dangle": ["error", { "allowAfterThis": true }],
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
   }
 }
