--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "history": "^4.9.0",
     "howler": "^2.1.2",
     "immer": "^3.1.2",
+    "lodash.throttle": "^4.1.1",
     "mousetrap": "^1.6.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
