--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "@gilbarbara/react-range-slider": "^0.4.3",
+    "@hot-loader/react-dom": "^16.9.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
